--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,65 +6,65 @@
 
 @layer base {
   :root {
-    --background: 224, 5%, 95%;
-    --foreground: 240 10% 3.9%;
+    --background: 210, 50%, 95%;
+    --foreground: 210, 10%, 20%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
+    --card: 0, 0%, 100%;
+    --card-foreground: 210, 10%, 20%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
+    --popover: 0, 0%, 100%;
+    --popover-foreground: 210, 10%, 20%;
 
-    --primary: 142.1 76.2% 36.3%;
-    --primary-foreground: 355.7 100% 97.3%;
+    --primary: 220, 80%, 50%;
+    --primary-foreground: 0, 0%, 100%;
 
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
+    --secondary: 210, 5%, 90%;
+    --secondary-foreground: 210, 10%, 20%;
 
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
+    --muted: 210, 5%, 90%;
+    --muted-foreground: 210, 5%, 50%;
 
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
+    --accent: 210, 5%, 90%;
+    --accent-foreground: 210, 10%, 20%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
+    --destructive: 0, 70%, 60%;
+    --destructive-foreground: 0, 0%, 100%;
 
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 142.1 76.2% 36.3%;
+    --border: 210, 10%, 85%;
+    --input: 210, 10%, 85%;
+    --ring: 220, 80%, 50%;
 
     --radius: 1rem;
   }
 
   .dark {
-    --background: 20 14.3% 4.1%;
-    --foreground: 0 0% 95%;
+    --background: 210, 20%, 10%;
+    --foreground: 0, 0%, 95%;
 
-    --card: 24 9.8% 10%;
-    --card-foreground: 0 0% 95%;
+    --card: 210, 20%, 20%;
+    --card-foreground: 0, 0%, 95%;
 
-    --popover: 0 0% 9%;
-    --popover-foreground: 0 0% 95%;
+    --popover: 210, 20%, 15%;
+    --popover-foreground: 0, 0%, 95%;
 
-    --primary: 142.1 70.6% 45.3%;
-    --primary-foreground: 144.9 80.4% 10%;
+    --primary: 220, 70%, 40%;
+    --primary-foreground: 0, 0%, 100%;
 
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
+    --secondary: 210, 20%, 25%;
+    --secondary-foreground: 0, 0%, 100%;
 
-    --muted: 0 0% 15%;
-    --muted-foreground: 240 5% 64.9%;
+    --muted: 210, 15%, 25%;
+    --muted-foreground: 210, 5%, 65%;
 
-    --accent: 12 6.5% 15.1%;
-    --accent-foreground: 0 0% 98%;
+    --accent: 210, 15%, 25%;
+    --accent-foreground: 0, 0%, 100%;
 
-    --destructive: 0 62.8% 50%;
-    --destructive-foreground: 0 85.7% 97.3%;
+    --destructive: 0, 50%, 60%;
+    --destructive-foreground: 0, 0%, 100%;
 
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 142.4 71.8% 29.2%;
+    --border: 210, 20%, 25%;
+    --input: 210, 20%, 25%;
+    --ring: 220, 70%, 40%;
   }
 }
 
